--- a/_extensions/produnis/buechlein/in-header.tex
+++ b/_extensions/produnis/buechlein/in-header.tex
@@ -26,6 +26,7 @@
 \definecolor{HSNRblue1}{RGB}{24,81,145}
 \definecolor{HSNRblue2}{RGB}{7,161,226}
 \definecolor{coral}{rgb}{1,0.5,0.31} % Orange color for graphics
+\definecolor{skyblue}{rgb}{0.529, 0.808, 0.922}
 \newcommand{\HSNRth}[1]{\cellcolor{HSNRblue1}\color{white}\large\textbf{#1}}
 \newcommand{\HSNRthb}[1]{\cellcolor{HSNRblue2}\color{white}\large\textbf{#1}}
 \newcommand{\REDth}[1]{\cellcolor{lightred}\color{black}#1}
